(lang dune 3.15)

(name dust)

(generate_opam_files true)

(source
 (github bricct/dust))

(authors "Trey Briccetti")

(maintainers "Trey Briccetti")

(license Apache-2.0)

(documentation https://url/to/documentation)

(package
 (name dust)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
