(executable
  (public_name timer)
  (name timer)
  (modules timer)
  (libraries dust core lwt notty)
  (flags
  (:standard -w -27-32-33-34-37-69)))

(executable
  (public_name secret)
  (name secret)
  (modules secret)
  (libraries dust lwt notty)
  (flags
  (:standard -w -27-32-33-34-37-69)))

(executable
  (public_name load)
  (name load)
  (modules load)
  (libraries dust lwt notty)
  (flags
  (:standard -w -27-32-33-34-37-69)))

(executable
  (public_name menu)
  (name menu)
  (modules menu)
  (libraries dust lwt notty)
  (flags
  (:standard -w -27-32-33-34-37-69)))
